# full_app

./: .gitignore  build.sh  docker-compose.yml
back/: .dockerignore  Cargo.toml  Dockerfile  database.db  database.db-shm  database.db-wal
back/.sqlx/: query-7f8180b71331d2b03816f5354f02c11e0bd21683db0d04c78b6e552e190871d3.json
back/data/: database.db
back/src/: api_docs.rs  api_errors.rs  api_responses.rs  db.rs  main.rs
back/src/handlers/: flights.rs  mod.rs  users.rs
back/src/models/: flight.rs  mod.rs  user.rs
back/src/models/dto/: users.rs
back/src/repository/: mod.rs  user_repository.rs
front/: Dockerfile  nginx.conf  package-lock.json  package.json
front/src/: App.tsx  router.tsx
front/src/api/: api.ts
front/src/entities/: ApiError.ts
front/src/pages/: Users.tsx
nginx/: Dockerfile  nginx.conf
