[package]
name = "back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
tower-http = { version = "0.6.8", features = ["fs"] }
